[package]
name = "sebastian-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
async-recursion = "1.0.0"
async-trait = "0.1.57"
cookie_store = "0.16.1"
lazy_static = "1.4.0"
log = "0.4.17"
regex = "1.6.0"
reqwest = { version = "0.11.11", features = ["cookies", "cookie_store", "cookie_crate"] }
reqwest_cookie_store = "0.3.0"
serde = { version = "1.0.144", features = ["derive"] }
tl = "0.7.7"
url = "2.2.2"
urldecode = "0.1.1"
